connexion à  l'API TMDB

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
 
     <div class="left_side">
       <mat-icon aria-hidden="false" aria-label="Example home icon">search</mat-icon>
-      <mat-icon aria-hidden="false" aria-label="Example home icon">notification</mat-icon>
+      <mat-icon>notifications</mat-icon>
     </div>
   </nav>
 
@@ -42,4 +42,8 @@
 <div class="main">
   <router-outlet></router-outlet>
 </div>
+
+<footer>
+  
+</footer>
 
