--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,9 @@
 .hero_baner{
 
   height: 100vh;
-  width: 100vw;
-  background: center/cover no-repeat url('../assets/images/mortal-kombat.jpg');
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(0, 0, 0)),
+              center/cover no-repeat url('../assets/images/mortal-kombat.jpg');
+
 
 
   display: flex;
@@ -13,7 +14,7 @@
   .nav_bar{
     font-family: 'Roboto', sans-serif;
     display: flex;
-    width: 100%;
+    padding: 0 20px;
     justify-content: space-between;
     align-items: center;
 
@@ -93,5 +94,11 @@
 .main{
   color: #fff;
   padding: 0 50px;
+}
+
+footer{
+  margin-top: 50px;
+  height: 100px;
+  background-color: #161616;
 }
 
