--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,8 +4,6 @@
   background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgb(0, 0, 0)),
               center/cover no-repeat url('../assets/images/mortal-kombat.jpg');
 
-
-
   display: flex;
   flex-direction: column;
   gap: 150px;
@@ -21,18 +19,20 @@
     background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0,0,0,1));
 
     color: #fff;
-    .right_side{
+    .right_side,
+    .left_side{
       display: flex;
       gap: 10px;
       align-items: center;
 
       .links{
         display: flex;
-        gap: 10px;
+        gap: 1em;
         list-style: none;
         li{
           opacity: .5;
           transition: .35s ease;
+          font-size: 1.3em;
           &:hover,
           &.active{
             opacity: 1;
@@ -58,13 +58,13 @@
     .hero_title{
       color: #fff;
       font-weight: 700;
-      font-size: 4em;
+      font-size: 5.5em;
       line-height: .5em;
     }
     .hero_detail{
       color: #fff;
       font-size: 400;
-      font-size: 1.5em;
+      font-size: 2em;
       letter-spacing: 2px;
       line-height: 1em;
     }
@@ -75,6 +75,7 @@
       button{
         display: flex;
         gap: 5px;
+        font-size: 1.5em;
         align-items: center;
         padding: .5em 2em;
         border: none;
@@ -93,7 +94,7 @@
 
 .main{
   color: #fff;
-  padding: 0 50px;
+  // padding: 0 50px;
 }
 
 footer{
