--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,7 @@ $angular-movies-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;700;900&display=swap');
 
 *{
   margin: 0;
