feet - ajouter de la Login Page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-
-<div class="main">
+<app-login-page></app-login-page>
+<div class="main" *ngIf="login">
   <router-outlet></router-outlet>
 </div>
-
 <footer>
-
 </footer>
+<!-- <button type="button" class="scrollUpBtn" (onclick)="scrollTop()"></button> -->
+
 
