--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="nav_bar">
+<nav [class.navbar_fixed]="navbar_fixed" class="navbar">
   <div class="right_side">
     <img src="../assets/images/netflix_logo.png" alt="" class="logo" width="120px">
     <ul class="links">
