--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -103,3 +103,26 @@ footer{
   background-color: #161616;
 }
 
+.scrollUpBtn{
+  appearance: none;
+  border: none;
+
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  opacity: .2;
+  border-radius: 50%;
+  position: sticky;
+  z-index: 10;
+  bottom: 10px;
+  float: right;
+  right: 10px;
+  cursor: pointer;
+
+  transition: .35s ease;
+  &:active{
+    opacity: 1;
+  }
+
+
+}
