--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,4 +1,6 @@
-.nav_bar{
+.navbar{
+
+  background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0,0,0,1));
   position: absolute;
   width: 100%;
   font-family: 'Roboto', sans-serif;
@@ -7,8 +9,9 @@
   justify-content: space-between;
   align-items: center;
 
-  background: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0,0,0,1));
   color: #fff;
+
+  transition: .8s ease;
 
   .right_side,
   .left_side{
@@ -36,3 +39,9 @@
     }
   }
 }
+
+.navbar_fixed{
+  position: fixed;
+  background-color: #000;
+}
+
